--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #2c90f5; 
+    background-image: url("images/—Pngtree—sky\ cloudiness\ weather\ clouds\ background_481546.jpg");
     text-align: center;
     padding: 20px;
 }
@@ -21,12 +21,6 @@ body {
     box-shadow: 0 2px 5px rgba(245, 248, 248, 0.979);
     overflow: hidden;
     transition: transform 0.3s;
-}
-
-.card-content {
-    padding: 15px;
-    /* font-family: Arial, sans-serif; */
-    display: inline-block;
 }
 
 .card-flex{
